# Encrypted-DNS

./: Cargo.toml  README.md  README_zh.md
src/: bootstrap.rs  cache.rs  cli.rs  common.rs  lib.rs  local.rs  main.rs  tcp.rs  udp.rs  upstream.rs
tests/: a_record.rs  aaaa_record.rs  txt_record.rs
tests/common/: mod.rs
