[package]
name = "https-dns"
description = "Minimal and efficient DNS-over-HTTPS (DoH) client"
version = "0.2.0"
edition = "2021"
authors = ["Xiaoyang Liu <siujoeng.lau@gmail.com>"]
readme = "README.md"
repository = "https://github.com/xiaoyang-sde/https-dns"
homepage = "https://github.com/xiaoyang-sde/https-dns"
documentation = "https://docs.rs/https-dns"
license = "MIT"
keywords = ["network", "udp", "cli", "dns"]
categories = ["network-programming", "web-programming", "command-line-utilities"]

[profile.release]
lto = "thin"

[dependencies]
tokio = { version = "1.21.2", features = ["rt", "net", "sync", "macros", "io-util"] }
clap = { version = "4.0.24", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json", "gzip", "brotli", "native-tls-vendored"] }
http = "0.2.8"
lru = "0.8.1"
trust-dns-proto = "0.22.0"
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
log = "0.4.17"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio"] }

[[bench]]
name = "cache"
harness = false
